# newy

./: .gitignore  README.md  pyproject.toml
data/: config.example.json  sources.seed.json
newy/: __init__.py  browser_fetcher.py  cli.py  config.py  delivery.py  feed_fetcher.py  models.py  navigation_agent.py  page_extractors.py  ranking.py  services.py  source_catalog.py  storage.py  summarizer.py  web.py
scripts/: install_browser_support.sh  install_git_hooks.sh  prepush_privacy_check.sh
tests/: test_digest.py  test_feed_fetcher.py  test_services.py
